--- a/style.css
+++ b/style.css
@@ -6,87 +6,49 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.home {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 70px 10px;
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 20px;
 }
-.home_left h2 {
-  color: black;
-  font-size: 53px;
-}
-.home_left p {
-  color: gray;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: bold;
-}
-.home_left button {
-  width: 200px;
-  height: 45px;
-  border-radius: 10px;
+
+.box_child {
+  height: 200px;
+  background-color: palevioletred;
   border: 2px solid black;
-  background: linear-gradient(45deg, hotpink, dodgerblue);
-  color: white;
-  font-size: 17px;
-  font-weight: bold;
-  cursor: pointer;
 }
-.home_right .img img {
-  width: 500px;
-}
-
-/* max-width: -->  katta widthdan kichrayganda (ichkariga) */
-/* min-width: -->  kichik widthdan kattalashtirilganda (tashqariga) */
-
-/* max-hight: -->  katta heightdan kichrayganda (bo'yi kichiklashtirilganda) */
-/* min-hight: -->  kichik heightdan kattalashtirilganda (bo'yi kattalashtirilganda) */
 
 @media (max-width: 1200px) {
-  .home_right .img img {
-    width: 450px;
-  }
-  .home_left h2 {
-    font-size: 43px !important;
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
   }
 }
 @media (max-width: 992px) {
-  .home_right .img img {
-    width: 300px;
+  .container {
+    grid-template-columns: repeat(3, 1fr);
   }
-  .home_left h2 {
-    font-size: 30px !important;
-  }
-  .home_left button {
-    width: 120px;
-    font-size: 14px;
-    height: 35px;
-  }
-  .home_left p {
-    font-size: 14px;
-  }
-  .home_left {
-    padding-right: 10px;
+  .box_child:nth-child(4),
+  .box_child:nth-child(5),
+  .box_child:nth-child(6) {
+    grid-column: 1 / 4;
   }
 }
 
 @media (max-width: 768px) {
-  .home {
-    flex-direction: column-reverse;
-    gap: 15px;
-    align-items: center;
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .box_child:nth-child(4),
+  .box_child:nth-child(5),
+  .box_child:nth-child(6) {
+    grid-column: auto;
   }
 }
-@media (max-width: 512px) {
-  .home_left button {
-    width: 100%;
-  }
-  .home_left {
-    text-align: center;
-  }
 
-  .home_right .img img {
-    width: 100%;
+@media (max-width: 512px) {
+  .container {
+    grid-template-columns: 1fr;
   }
 }
